[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/MangabeyRegular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Lobby/UserInfoEditScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="UserInfoEditScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.0196078, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/ColorRect"]
margin_left = 539.0
margin_top = 304.0
margin_right = 697.0
margin_bottom = 331.0
custom_fonts/font = SubResource( 1 )
text = "Set Display Name"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DisplayNameInput" type="LineEdit" parent="NinePatchRect/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="NinePatchRect/ColorRect"]
margin_left = 621.0
margin_top = 387.0
margin_right = 737.0
margin_bottom = 401.0
text = "Max 32 characters"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="NinePatchRect/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 641.0
margin_top = 409.0
margin_right = -539.0
margin_bottom = -271.0
color = Color( 0.0745098, 0.25098, 0.0745098, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SetDisplayNameBtn" type="TextureButton" parent="NinePatchRect/ColorRect/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/ColorRect/ColorRect/SetDisplayNameBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -18.0
margin_right = 20.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "Set"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NinePatchRect/ColorRect/ColorRect/SetDisplayNameBtn" to="." method="_on_SetDisplayNameBtn_pressed"]
